# libfmod

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
libfmod/: Cargo.toml  build.rs
libfmod-gen/: .gitignore  Cargo.toml  README.md
libfmod-gen/src/: main.rs  models.rs  repr.rs
libfmod-gen/src/generators/: errors.rs  ffi.rs  flags.rs  lib.rs  mod.rs
libfmod-gen/src/grammars/: fmod.pest  fmod_codec.pest  fmod_common.pest  fmod_dsp.pest  fmod_dsp_effects.pest  fmod_errors.pest  fmod_output.pest  fmod_studio.pest  fmod_studio_common.pest
libfmod-gen/src/parsers/: fmod.rs  fmod_codec.rs  fmod_common.rs  fmod_docs.rs  fmod_dsp.rs  fmod_dsp_effects.rs  fmod_errors.rs  fmod_output.rs  fmod_studio.rs  fmod_studio_common.rs  mod.rs
libfmod-gen/src/patching/: dictionary.rs  fields.rs  functions.rs  mod.rs  post_processing.rs  structures.rs
libfmod/src/: errors.rs  ffi.rs  flags.rs  lib.rs
libfmod/tests/: fmod.rs
libfmod/tests/data/Assets/: License.txt
libfmod/tests/data/Metadata/: Master.xml  Tags.xml  Workspace.xml
libfmod/tests/data/Metadata/Bank/: {650fad44-db5f-4039-a833-6d150d1c91df}.xml  {fa4db5ee-aa2c-48dc-a4d1-77bac4164250}.xml
libfmod/tests/data/Metadata/EncodingSetting/: {b71863bb-c285-4607-acf0-fe81d739affa}.xml
libfmod/tests/data/Metadata/Event/: {cb21ed3f-0b0f-4ad8-859b-c4eb9ac33149}.xml  {e31dfc77-f646-40b0-bd74-873b8f7b341f}.xml
libfmod/tests/data/Metadata/EventFolder/: {0b782276-164b-4e41-9229-a6b70a9928a9}.xml
libfmod/tests/data/Metadata/Group/: {c5744f72-7a9e-431e-a520-233497ad2911}.xml
libfmod/tests/data/Metadata/ParameterPreset/: {d4409070-2f78-4735-b442-65efcf03852c}.xml
libfmod/tests/data/Metadata/ParameterPresetFolder/: {e58215fc-4390-4b01-b8c1-475b934448de}.xml
libfmod/tests/data/Metadata/Return/: {2e15c0dd-4996-4ea3-8293-12b52e2362f9}.xml  {4b1e899b-e8ed-45ad-9f72-d619c9a2e951}.xml
libfmod/tests/data/Metadata/SnapshotGroup/: {7f71965c-cfed-40c9-9dc2-c3df37396296}.xml
libfmod/tests/examples/: core.rs  mod.rs  studio.rs
libfmod/tests/manual/: cpu_performance.rs  getting_started.rs  mod.rs  reverb_3d.rs  sound_3d.rs
src/: ffi.rs  lib.rs
(+24 files in other folders)
