[package]
name = "libfmod"
version = "2.2.6-bindings.1"
edition = "2021"
license = "MIT"
description = "A library wrapper for integrating FMOD Engine in Rust applications."
readme = "README.md"
homepage = "https://github.com/lebedec/libfmod"
repository = "https://github.com/lebedec/libfmod"

[dependencies]
