[package]
name = "libfmod-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
quote = "1.0"
rustfmt-wrapper = "0.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
convert_case = "0.5.0"
handlebars = "4.2.1"
lazy_static = "1.4.0"
regex = "1.5.5"