[package]
name = "libfmod"
version = "2.206.6"
publish = true
edition = "2021"
license = "MIT"
description = "A library wrapper for integrating FMOD Engine in Rust applications."
readme = "README.md"
homepage = "https://github.com/lebedec/libfmod"
repository = "https://github.com/lebedec/libfmod"

exclude = [
    "tests/data/**"
]

[features]
default = ["flags"]
flags = ["bitflags"]
debug = []

[dependencies]
bitflags = { version = "1", optional = true }

